--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       crossorigin="anonymous"
     ></script>                                                 
     <script>
-      let socket = io.connect("http://localhost:5000");               //io comes from above library 
+      let socket = io.connect("https://openboard-clone-app.herokuapp.com");               //io comes from above library 
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
